# raft-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/replica/: messages.cpp  messages.h  replica.cpp  replica.h
src/utils/: parse_args.cpp  parse_args.h
tst/: test_parse_args.cpp
